# onto_builder

./: .gitignore  CLAUDE.md  LICENSE  README.md  pet_store.onto.yaml  pyproject.toml  streamlit_app.py
.claude/: settings.local.json
.github/workflows/: publish.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-existing-tests-pass.txt  task-1-fixtures-correct.txt  task-5-cli-error-message.txt  task-5-cli-export-formats.txt  task-5-tests-pass.txt  task-6-streamlit-code-check.txt  task-6-streamlit-import.txt  task-6-tests-pass.txt
.sisyphus/plans/: rag-friendly-export.md
examples/: bookstore.csv  concept_university.csv  hospital_surgery_booking.onto.yaml  hospital_surgery_bookings.csv  quickstart.py  real_ecommerce_orders.csv
examples/onto_interview/: app.py  dataset_analyzer.py  ontology_builder.py  openai_client.py  prompts.py  requirements.txt
examples/onto_interview/plan_source/: ONTOLOGY.md  ontology_guide.html  owl_scenarios.html
src/ontobuilder/: __init__.py  __main__.py  mcp_server.py
src/ontobuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ontobuilder/chat/: __init__.py  checker.py  scenario.py  workspace.py
src/ontobuilder/cli/: app.py  apply_cmds.py  concept_cmds.py  helpers.py  improve_cmds.py  llm_cmds.py  project_cmds.py  relation_cmds.py  tool_cmds.py
src/ontobuilder/core/: model.py  ontology.py  validation.py
src/ontobuilder/domains/: base.py  ecommerce.py  healthcare.py  registry.py
src/ontobuilder/education/: glossary.py
src/ontobuilder/graph/: base.py  neo4j_backend.py  networkx_backend.py
src/ontobuilder/llm/: __init__.py  client.py  inference.py  interview.py  openai_client.py  prompts.py  schemas.py
src/ontobuilder/owl/: __init__.py  export.py  query.py  reasoning.py
src/ontobuilder/serialization/: fewshot_io.py  json_io.py  jsonld_io.py  jsonschema_io.py  prompt_enhanced.py  prompt_io.py  schemacard_io.py  yaml_io.py
src/ontobuilder/tool/: __init__.py  analyzer.py  audit.py  compare.py  interactive.py  populate.py  suggestions.py
tests/: conftest.py  test_apply_integration.py  test_audit.py  test_chat.py  test_compare.py  test_fewshot_export.py  test_first_run_cli.py  test_graph.py  test_hospital_surgery_booking_scenario.py  test_improve_cli.py  test_jsonld_export.py  test_jsonschema_export.py  test_llm_inference.py  test_model.py  test_ontology.py  test_openai_client.py  test_owl_export.py  test_prompt_enhanced.py  test_prompt_export.py  test_query.py  test_reasoning.py  test_scenario_constraint.py  test_schemacard_export.py  test_tool.py  test_workspace.py
