[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontobuilder"
version = "0.1.4"
description = "Build, explore, and export ontologies from data — no PhD required."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["ontology", "owl", "rdf", "knowledge-graph", "cli", "data-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "rdflib>=7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0", "pydantic>=2.0"]
llm = ["litellm>=1.0", "instructor>=1.0", "pydantic>=2.0"]
mcp = ["mcp>=1.0", "pydantic>=2.0"]
neo4j = ["neo4j>=5.0"]
web = ["streamlit>=1.30"]
dev = ["pytest>=8.0", "ruff"]
all = [
    "openai>=1.0",
    "pydantic>=2.0",
    "litellm>=1.0",
    "instructor>=1.0",
    "mcp>=1.0",
    "neo4j>=5.0",
    "streamlit>=1.30",
]

[project.urls]
Homepage = "https://github.com/iksunglee/onto_builder"
Repository = "https://github.com/iksunglee/onto_builder"
Issues = "https://github.com/iksunglee/onto_builder/issues"

[project.scripts]
ontobuilder = "ontobuilder.cli.app:app"
onto = "ontobuilder.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
